// This is the public API offered by your entity.
syntax = "proto3";

//import "google/protobuf/empty.proto";
//import "cloudstate/entity_key.proto";
//import "google/api/annotations.proto";

package fd;

option go_package = "fd";

message Empty {}

message FraudDetectionReport {
    bool potential_fraud = 1;
    int32 risk_score = 2;
    string rule_id = 3;
}

message Transaction {
    string trans_id = 1;
    int64 timestamp = 2;
    int32 amount_cents = 3;
}
message TransactionState {
    Transaction trans = 1;
    FraudDetectionReport fraud_report = 2;
}

message FraudDetectionRule {
    string rule_id = 1;
    int32 max_amount_cents = 2;
    int32 trans_backtrack_hours = 3;
}

message CustomerState {
    FraudDetectionRule rule = 1;
    repeated TransactionState trans = 2;
}

message CreateCustomerCommand {
    string customer_id = 1 ;//[(.cloudstate.entity_key) = true];
    FraudDetectionRule rule = 2;
    repeated Transaction trans_history = 3;
}

message AddTransactionCommand {
    string customer_id = 1 ;//[(.cloudstate.entity_key) = true];
    Transaction trans = 2;
}
message GetCustomerCommand {
    string customer_id = 1 ;//[(.cloudstate.entity_key) = true];
}

message UpdateFraudDetectionRuleCommand {
    string customer_id = 1 ;//[(.cloudstate.entity_key) = true];
    FraudDetectionRule rule = 2;
}

service CustomerFraudDetection {
    rpc CreateCustomer(CreateCustomerCommand) returns (Empty){
//        option (google.api.http) = {
//            post: "/customers",
//            body: "*",
//        };
    };
    rpc GetCustomer(GetCustomerCommand) returns (CustomerState){
//        option (google.api.http) = {
//            get: "/customers/{customer_id}"
//        };
    };
    rpc UpdateFraudDetectionRule(UpdateFraudDetectionRuleCommand) returns (Empty){
//        option (google.api.http) = {
//            post: "/customers/{customer_id}/fraud-detection-rule",
//            body: "*",
//        };
    };
    rpc AddTransaction(AddTransactionCommand) returns (FraudDetectionReport){
//        option (google.api.http) = {
//            post: "/customers/{customer_id}/trans",
//            body: "*",
//        };
    };
}
